# TechCatalyst_DE_2026

./: 2026_outline.md  Curriculum_Mapping_2026.md  README.md  Technology_Map_2026.md  feedback.md  pyproject.toml
Week 1/: README.md
Week 1/Instructor Notes/: Day 4 - Instructor Guide.md
Week 1/Labs/Day 1/: Activity_1_Analytics_in_Action.md  Activity_2_Car_Insurance_Case_Study.md  README.md  Student_Resources.md
Week 1/Labs/Day 2/: Activity_1_Cloud_Architecture_Scenarios.md  Activity_2_Cloud_Architecture_Scenarios.md  Activity_3_Estimate_the_Bill.md  README.md  Student_Resources.md
Week 1/Labs/Day 3/: Lab_C_GitHub_Remote_and_Collaboration.md  README.md  Student_Resources.md
Week 1/Labs/Day 4/: Activity_3_S3_Object_Storage_AWS_Mirror.md  Activity_4_Athena_Query_in_Place.md  Activity_5_Athena_Joins.md  Activity_6_Glue_Crawler.md  Activity_7_Bucket_Lock.md  Activity_Cloud_Object_Storage.md  README.md  Student_Resources.md
Week 1/Labs/Day 5/: README.md  Student_Resources.md  architecture_starter.drawio
Week 1/Slides/: W1D1 - Data Engineering Foundations.pptx  W1D2 - Cloud Fundamentals.pptx  W1D3 - Developer Environment Setup.pptx  W1D4 - Cloud Object Storage.pptx  W1D4 - Data at Rest - Updated.pptx  W1D5 - Data Architectures and Pipeline Design.pptx
Week 2/: README.md
Week 2/Labs/Day 1/: Group_Activity_Terminal_Operations_Decision_Brief.md  Instructor_Demo.md  README.md  (+2 more)
Week 3/: README.md
Week 4/: README.md
Week 4/Refresher/: Activity_0_Refresher_Workspace_Setup.md  Activity_2_NYC_Taxi_Pandas_ETL.ipynb  Activity_3_NYC_Taxi_Polars_ETL.ipynb
(+362 files in other folders)
