[project]
name = "techcatalyst-de-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.40",
    "google-cloud-storage>=3.12.0",
    "ipykernel>=7.3.0",
    "pandas>=3.0.3",
    "polars>=1.42.1",
    "pyarrow>=24.0.0",
]
